# Regex

./: CMakeLists.txt
examples/: CMakeLists.txt  simple_example.c
include/: cregex.h  regex.h
src/: cregex.c  regex.c
tests/: CMakeLists.txt  regex_tests.c
